2006-07-23  Sebastien Bacher  <seb128@debian.org>

	* theme-method.directory.in: add encoding key, 
	patch by Vincent Fretin <vincent.fretin@gmail.com> (Closes: #338593)

2006-07-11  Sebastien Bacher  <seb128@debian.org>

	* Makefile.am: fix distclean build target

2006-04-05  Glynn Foster <glynn.foster@sun.com>

        * Makefile.am: Move the .directory files to
        $datadir/desktop-directories. Fixes #334405.

2005-11-14  Sebastien Bacher  <seb128@debian.org>

	* theme-thumbnailer.c: (main): 
	don't call gnome_theme_init (), it's not required. Speedup of 15-20%.

2005-11-14  Rodrigo Moya <rodrigo@novell.com>

	* theme-method.c (do_tell): fixed function signature.

2005-11-14  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-method.c: (do_open): Remove unused var.

2005-09-25  Sebastien Bacher  <seb128@debian.org>

	* themus-theme-applier.desktop.in.in: 
	fix a typo with the StartupNotify option, 
	thanks Vincent Fretin <vincent.fretin@gmail.com> for pointing this
	(Closes: #316159).

2005-02-10  Sebastien Bacher  <seb128@debian.org>

	* theme-thumbnailer.c: (main): fix the crash if the given theme 
	is not correct (Closes: #153203).

2005-02-09  Sebastien Bacher  <seb128@debian.org>

	* theme-thumbnailer.c: (main): change back to the previous code,
	that fixes the themes:/// thumbnails (Closes: #165778).

2005-01-27  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-thumbnailer.c: (main): Don't leak the theme name
	if the theme is invalid.
	* themus-properties-view.c: (themus_properties_view_init):
	NULL vs. 0 in gnome_theme_init()

2005-01-04  Shakti Sen <shprasad@novell.com>

	* theme-thumbnailer.c (main): Added the full path of the theme
	so that it will create the thumbnail.
	Fixes bug #153203

2004-12-25  Kjartan Maraas  <kmaraas@gnome.org>

	* theme-method.c: (vfs_module_init): NULL vs. 0
	* theme-thumbnailer.c: (main): Same
	* themus-theme-applier.c: (main): Same

2004-12-10  James Henstridge  <james@jamesh.id.au>
